--- a/L4Mathematics/Lab4/math_lab4_sets_and_logic.ipynb
+++ b/L4Mathematics/Lab4/math_lab4_sets_and_logic.ipynb
@@ -8,45 +8,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A = {1, 2}\n",
-      "B = {3, 4}\n",
-      "AUB = {1, 2, 3, 4}\n",
-      "A∩B = set()\n",
-      "A\\B = {1, 2}\n",
-      "A subset of B= False\n",
-      "A subset of C= True\n"
+      "help\n",
+      "A∩B= {1, 3, 5}\n",
+      "B∩C= {9, 3}\n",
+      "B∩D= set()\n",
+      "U∩C= {3, 5}\n",
+      "AUB= {1, 2, 3, 4, 5, 7, 9}\n",
+      "AUC= {1, 3, 4, 5, 7, 8, 9}\n",
+      "BUC= {1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "UUA= {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n",
+      "D\\A= {8, 6}\n",
+      "C\\B= {8, 4}\n",
+      "A\\C= {1, 2, 5}\n",
+      "U\\B= {2, 4, 6, 8, 10}\n",
+      "A^c= {6, 7, 8, 9, 10}\n",
+      "B^c= {2, 4, 6, 8, 10}\n",
+      "C^c= {1, 2, 5, 6, 7, 10}\n",
+      "A= True\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:7: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "<>:7: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "C:\\Users\\riley\\AppData\\Local\\Temp\\ipykernel_27188\\3535862426.py:7: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "  print('A\\B =', A.difference(B))\n"
+      "<>:26: SyntaxWarning: invalid escape sequence '\\A'\n",
+      "<>:27: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "<>:28: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "<>:29: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "<>:26: SyntaxWarning: invalid escape sequence '\\A'\n",
+      "<>:27: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "<>:28: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "<>:29: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "C:\\Users\\riley\\AppData\\Local\\Temp\\ipykernel_18156\\2248839350.py:26: SyntaxWarning: invalid escape sequence '\\A'\n",
+      "  print('D\\A=', D.difference(A))\n",
+      "C:\\Users\\riley\\AppData\\Local\\Temp\\ipykernel_18156\\2248839350.py:27: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "  print('C\\B=', C.difference(B))\n",
+      "C:\\Users\\riley\\AppData\\Local\\Temp\\ipykernel_18156\\2248839350.py:28: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "  print('A\\C=', A.difference(C))\n",
+      "C:\\Users\\riley\\AppData\\Local\\Temp\\ipykernel_18156\\2248839350.py:29: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "  print('U\\B=', U.difference(B))\n"
      ]
     }
    ],
    "source": [
-    "A = {1,2}; print ('A =', A)\n",
-    "B = {3,4}; print ('B =', B)\n",
-    "C = set()\n",
-    "# union, intersection, relative complement, \n",
-    "print('AUB =', A.union(B))\n",
-    "print('A∩B =', A.intersection(B))\n",
-    "print('A\\B =', A.difference(B))\n",
-    "# Subsets\n",
-    "print('A subset of B=', A.issubset(B))\n",
-    "print('A subset of C=', A.issubset(A.union(C)))"
+    "def sets_exercises():\n",
+    "    #universal set of natural numbers <11 \n",
+    "    print(\"help\")\n",
+    "    U = {1,2,3,4,5,6,7,8,9,10}\n",
+    "\n",
+    "    # subsets of U\n",
+    "    A = {1,2,3,4,5}\n",
+    "    B = {1,3,5,7,9}\n",
+    "    C = {3,4,8,9}\n",
+    "    D = {2,4,6,8}\n",
+    "    E = {3,5}\n",
+    "\n",
+    "    # intersection \n",
+    "    print('A∩B=', A.intersection(B))\n",
+    "    print('B∩C=', B.intersection(C))\n",
+    "    print('B∩D=', B.intersection(D))\n",
+    "    print('U∩C=', U.intersection(E))\n",
+    "\n",
+    "    # Union\n",
+    "    print('AUB=', A.union(B))\n",
+    "    print('AUC=', B.union(C))\n",
+    "    print('BUC=', B.union(D))\n",
+    "    print('UUA=', U.union(E))\n",
+    "\n",
+    "    # Relative complement\n",
+    "    print('D\\A=', D.difference(A))\n",
+    "    print('C\\B=', C.difference(B))\n",
+    "    print('A\\C=', A.difference(C))\n",
+    "    print('U\\B=', U.difference(B))\n",
+    "\n",
+    "    # Absolute complement\n",
+    "    print('A^c=' , U.difference(A))\n",
+    "    print('B^c=' , U.difference(B))\n",
+    "    print('C^c=' , U.difference(C))\n",
+    "\n",
+    "    # Power set\n",
+    "    print('A=', A.issubset(U))\n",
+    "\n",
+    "sets_exercises()\n",
+    "\n"
    ]
   }
  ],
