--- a/L4Mathematics/Lab4/math_lab4_sets_and_logic.ipynb
+++ b/L4Mathematics/Lab4/math_lab4_sets_and_logic.ipynb
@@ -8,6 +8,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import math"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,59 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "help\n",
-      "A∩B= {1, 3, 5}\n",
-      "B∩C= {9, 3}\n",
-      "B∩D= set()\n",
-      "U∩C= {3, 5}\n",
-      "AUB= {1, 2, 3, 4, 5, 7, 9}\n",
-      "AUC= {1, 3, 4, 5, 7, 8, 9}\n",
-      "BUC= {1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
-      "UUA= {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n",
-      "D\\A= {8, 6}\n",
-      "C\\B= {8, 4}\n",
-      "A\\C= {1, 2, 5}\n",
-      "U\\B= {2, 4, 6, 8, 10}\n",
-      "A^c= {6, 7, 8, 9, 10}\n",
-      "B^c= {2, 4, 6, 8, 10}\n",
-      "C^c= {1, 2, 5, 6, 7, 10}\n",
-      "A= True\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:26: SyntaxWarning: invalid escape sequence '\\A'\n",
-      "<>:27: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "<>:28: SyntaxWarning: invalid escape sequence '\\C'\n",
-      "<>:29: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "<>:26: SyntaxWarning: invalid escape sequence '\\A'\n",
-      "<>:27: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "<>:28: SyntaxWarning: invalid escape sequence '\\C'\n",
-      "<>:29: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "C:\\Users\\riley\\AppData\\Local\\Temp\\ipykernel_18156\\2248839350.py:26: SyntaxWarning: invalid escape sequence '\\A'\n",
-      "  print('D\\A=', D.difference(A))\n",
-      "C:\\Users\\riley\\AppData\\Local\\Temp\\ipykernel_18156\\2248839350.py:27: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "  print('C\\B=', C.difference(B))\n",
-      "C:\\Users\\riley\\AppData\\Local\\Temp\\ipykernel_18156\\2248839350.py:28: SyntaxWarning: invalid escape sequence '\\C'\n",
-      "  print('A\\C=', A.difference(C))\n",
-      "C:\\Users\\riley\\AppData\\Local\\Temp\\ipykernel_18156\\2248839350.py:29: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "  print('U\\B=', U.difference(B))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sets_exercises():\n",
-    "    #universal set of natural numbers <11 \n",
-    "    print(\"help\")\n",
+    "    # universal set of natural numbers <11 \n",
     "    U = {1,2,3,4,5,6,7,8,9,10}\n",
     "\n",
     "    # subsets of U\n",
@@ -78,7 +41,7 @@
     "    D = {2,4,6,8}\n",
     "    E = {3,5}\n",
     "\n",
-    "    # intersection \n",
+    "    # Intersection\n",
     "    print('A∩B=', A.intersection(B))\n",
     "    print('B∩C=', B.intersection(C))\n",
     "    print('B∩D=', B.intersection(D))\n",
@@ -91,10 +54,10 @@
     "    print('UUA=', U.union(E))\n",
     "\n",
     "    # Relative complement\n",
-    "    print('D\\A=', D.difference(A))\n",
-    "    print('C\\B=', C.difference(B))\n",
-    "    print('A\\C=', A.difference(C))\n",
-    "    print('U\\B=', U.difference(B))\n",
+    "    print(r'D\\A=', D.difference(A))\n",
+    "    print(r'C\\B=', C.difference(B))\n",
+    "    print(r'A\\C=', A.difference(C))\n",
+    "    print(r'U\\B=', U.difference(B))\n",
     "\n",
     "    # Absolute complement\n",
     "    print('A^c=' , U.difference(A))\n",
@@ -102,11 +65,82 @@
     "    print('C^c=' , U.difference(C))\n",
     "\n",
     "    # Power set\n",
-    "    print('A=', A.issubset(U))\n",
+    "    print('P(U)=', U)\n",
+    "    print('P(A)=', A)\n",
+    "    print('P(E)=', E)\n",
     "\n",
-    "sets_exercises()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sets Exercise with limits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(S)= []\n",
+      "P(S)= [0.]\n",
+      "P(S)= [ 0. inf]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what set is S = {{b,c} U {d,e} n {0,+inifinity,e^ln(-j)}}\n",
+    "def limitSets():\n",
+    "    B = 0\n",
+    "    C = math.inf\n",
+    "    D = 2\n",
+    "    E = -math.inf\n",
+    "\n",
+    "    part1 = {B,C}.union({D,E})\n",
+    "    S = part1.intersection({0, math.inf, np.exp(np.log(-1j))}) \n",
+    "    #print(part1)\n",
+    "\n",
+    "    # powerset of S\n",
+    "    for i in range(0, len(S)+1):\n",
+    "        print('P(S)=', np.random.choice(list(S), i))\n",
+    "        X = np.random.choice(list(S), i)\n",
+    "\n",
+    "    # logical problem (!p X q) == p\n",
+    "    p1 = S.intersection({2j}) \n",
+    "    p = p1 == set()\n",
+    "    q1 = S.difference({0}).intersection(X)\n",
+    "    q = True\n",
+    "\n",
+    "    if not p ^ q == p: # ^ is XOR\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "limitSets()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
