--- a/L4Mathematics/MathsAssignment/maths_assignment.ipynb
+++ b/L4Mathematics/MathsAssignment/maths_assignment.ipynb
@@ -191,13 +191,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
    "outputs": [
@@ -244,6 +237,32 @@
     "\n",
     "task3()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sad' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43msad\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sad' is not defined"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
